Workaround for minimum size not being kept when deactivating constants

BUG: 448760

In my previous resizing support merge request (https://invent.kde.org/utilities/kcalc/-/merge_requests/24), I made sure that any KCalc mode changes that happen at minimum window size result in the window resizing itself to the new minimum size. However, this turns out to not have worked in one specific case: Showing/Hiding the constants buttons.

Upon investigation of this issue, I noticed that `minimumSize()` isn't updating correctly after hiding of the buttons (and stays at the old minimumSize). Thus, the call to `resize(minimumSize())` doesn't work.